--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -8,6 +8,12 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: ''
 
     steps:
     - uses: actions/checkout@v2
