--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,6 +14,8 @@ jobs:
         image: mysql:8.0
         env:
           MYSQL_ROOT_PASSWORD: ''
+        ports:
+          - 3306:3306
 
     steps:
     - uses: actions/checkout@v2
