--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -8,6 +8,14 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: 'password'
+        ports:
+          - 3306:3306
 
     steps:
     - uses: actions/checkout@v2
